--- a/bydistrict.html
+++ b/bydistrict.html
@@ -10,41 +10,63 @@
 </head>
 
 <body>
-    <picture>
+    <picture class="logo">
         <img src="/images/logo.png" alt="Omnomyum Logo">
         <!--Source: Original work by Carrie Kim-->
     </picture>
 
-    <h1>By District</h1>
-
     <nav>
         <ul>
             <li>
-                <picture>
-                <!-- Source: https://www.freepik.com/search?format=search&query=line%20home%20icon&type=icon -->
-                <img alt="" src="images/homepage.png">
-                </picture>
-            </li>
-            <li>
-                Source: <cite> <a href="https://www.freepik.com/search?format=search&query=line%20home%20icon&type=icon">home icon</a></cite>
-            </li>
-            <li><a href="index.html">Home</a></li>
-
-            <li>
-                <picture>
-                <!-- Source: https://www.freepik.com/search?format=search&last_filter=query&last_value=line+person+icon&query=line+person+icon&type=icon -->
-                <img alt="" src="images/me.png">
-                </picture>
-            </li>
-            <li>
-                Source: <cite> <a href="https://www.freepik.com/search?format=search&last_filter=query&last_value=line+person+icon&query=line+person+icon&type=icon">person icon</a></cite>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                        <!-- Source: Original work by Carrie Kim -->
+                        <img alt="" src="images/homeicon.png">
+                        </picture>
+                    </li>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
             </li>
 
-            <li><a href="aboutme.html">About Me</a></li>
-            <li><a href="bycuisine.html">By Cuisine</a></li>
-            <li><a href="bydistrict.html">By District</a></li>
+            <li>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                            <!-- Source: Original work by Carrie Kim -->
+                            <img alt="" src="images/personicon.png">
+                        </picture>
+                    </li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                </ul>
+            </li>
+
+            <li>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                            <!-- Source: Original work by Carrie Kim -->
+                            <img alt="" src="images/cuisineicon.png">
+                        </picture>
+                    </li>
+                    <li><a href="bycuisine.html">By Cuisine</a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                            <!-- Source: Original work by Carrie Kim -->
+                            <img alt="" src="images/districticon.png">
+                        </picture>
+                    </li>
+                    <li><a href="bydistrict.html">By District</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
+
+    <h1>By District</h1>
 
     <ul>
         <!--Source: Original work by Carrie Kim, Information reference cited below-->
@@ -61,13 +83,13 @@
                         <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
                     </ul>
                     <!--Source: https://naver.me/xtWHF1x9-->
-                    Source: <cite><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite>
+                    Source: <cite ><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite>
                     <br>
                     <picture>
                         <img src="/images/omurice.jpg" alt="omurice">
                     </picture><br>
                     <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
-                    Source: <cite> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
                 <li>
@@ -86,7 +108,7 @@
                         <img src="/images/dakgalbi.jpg" alt="dakgalbi">
                     </picture><br>
                     <!--Source: https://www.siksinhot.com/P/375109-->
-                    Source: <cite> <a href="https://www.siksinhot.com/P/375109">dakgalbi</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://www.siksinhot.com/P/375109">dakgalbi</a></cite>
                 </li>
 
                 <li>
@@ -105,7 +127,7 @@
                         <img src="/images/kimchifriedrice.jpg" alt="kimchifriedrice">
                     </picture><br>
                     <!--Source: https://m.blog.naver.com/zkxmqkek/222385243560-->
-                    Source: <cite> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
                 </li>
             </ul>
         </li>
@@ -128,7 +150,7 @@
                         <img src="/images/hotpotudon.jpg" alt="udon">
                     </picture><br>
                     <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
-                    Source: <cite> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
 
                 <li>
@@ -147,7 +169,7 @@
                         <img src="/images/gamsungtaco.jpg" alt="tacos">
                     </picture><br>
                     <!--Source: https://chordq0539.tistory.com/738-->
-                    Source: <cite> <a href="https://chordq0539.tistory.com/738">tacos</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://chordq0539.tistory.com/738">tacos</a></cite>
                 </li>
 
                 <li>
@@ -166,7 +188,7 @@
                         <img src="/images/jjampong.jpg" alt="jjampong">
                     </picture><br>
                     <!--Source: https://amkorinstory.com/1101-->
-                    Source: <cite> <a href="https://amkorinstory.com/1101">jjampong</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://amkorinstory.com/1101">jjampong</a></cite>
                 </li>
             </ul>
         </li>
@@ -190,7 +212,7 @@
                         <img src="/images/sashimi.jpg" alt="sashimi">
                     </picture><br>
                     <!--Source: https://blog.naver.com/postman6666/221132720385-->
-                    Source: <cite> <a href="https://blog.naver.com/postman6666/221132720385">sashimi</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://blog.naver.com/postman6666/221132720385">sashimi</a></cite>
                 </li>
 
                 <li>
@@ -209,7 +231,7 @@
                         <img src="/images/oreno.jpg" alt="oreno ramen">
                     </picture><br>
                     <!--Source: https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html-->
-                    Source: <cite> <a href="https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html">ramen</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html">ramen</a></cite>
                 </li>
             </ul>
         </li>
@@ -233,7 +255,7 @@
                         <img src="/images/fukuoka.jpg" alt="hambageu">
                     </picture><br>
                     <!--Source: http://m.menupan.com/restaurant/onepage.asp?acode=J104085-->
-                    Source: <cite> <a href="http://m.menupan.com/restaurant/onepage.asp?acode=J104085">hambageu</a></cite>
+                    Source: <cite class="pic-cite"> <a href="http://m.menupan.com/restaurant/onepage.asp?acode=J104085">hambageu</a></cite>
                 </li>
 
                 <li>
@@ -252,7 +274,7 @@
                         <img src="/images/jjajang.jpg" alt="jjajang">
                     </picture><br>
                     <!--Source: https://emmaru.com/matzip/matzip.do?code=M171210131410346771N-->
-                    Source: <cite> <a href="https://emmaru.com/matzip/matzip.do?code=M171210131410346771N">jjajang</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://emmaru.com/matzip/matzip.do?code=M171210131410346771N">jjajang</a></cite>
                 </li>
 
                 <li>
@@ -271,7 +293,7 @@
                         <img src="/images/nilli-vongole.jpg" alt="vongole">
                     </picture><br>
                     <!--Source: https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG-->
-                    Source: <cite> <a href="https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG">vongole</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG">vongole</a></cite>
                 </li>
 
                 <li>
@@ -290,7 +312,7 @@
                         <img src="/images/spicycoldnoodles.jpg" alt="spicy cold noodles">
                     </picture><br>
                     <!--Source: https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html-->
-                    Source: <cite> <a href="https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html">cold noodles</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html">cold noodles</a></cite>
                 </li>
             </ul>
         </li>
@@ -314,7 +336,7 @@
                         <img src="/images/omurice.jpg" alt="omurice">
                     </picture><br>
                     <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
-                    Source: <cite> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
                 <li>
@@ -333,7 +355,7 @@
                         <img src="/images/hotpotudon.jpg" alt="udon">
                     </picture><br>
                     <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
-                    Source: <cite> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
+                    Source: <cite class="pic-cite"> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
             </ul>
         </li>
