--- a/index.html
+++ b/index.html
@@ -10,69 +10,94 @@
 </head>
 
 <body>
-    <picture>
+    <picture class="logo">
         <img src="/images/logo.png" alt="Omnomyum Logo">
         <!--Source: Original work by Carrie Kim-->
     </picture>
 
-    <h1>Home</h1>
-
     <nav>
         <ul>
             <li>
-                <picture>
-                <!-- Source: https://www.freepik.com/search?format=search&query=line%20home%20icon&type=icon -->
-                <img alt="" src="images/homepage.png">
-                </picture>
-            </li>
-            <li>
-                Source: <cite> <a href="https://www.freepik.com/search?format=search&query=line%20home%20icon&type=icon">home icon</a></cite>
-            </li>
-            <li><a href="index.html">Home</a></li>
-
-            <li>
-                <picture>
-                <!-- Source: https://www.freepik.com/search?format=search&last_filter=query&last_value=line+person+icon&query=line+person+icon&type=icon -->
-                <img alt="" src="images/me.png">
-                </picture>
-            </li>
-            <li>
-                Source: <cite> <a href="https://www.freepik.com/search?format=search&last_filter=query&last_value=line+person+icon&query=line+person+icon&type=icon">person icon</a></cite>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                        <!-- Source: Original work by Carrie Kim -->
+                        <img alt="" src="images/homeicon.png">
+                        </picture>
+                    </li>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
             </li>
 
-            <li><a href="aboutme.html">About Me</a></li>
-            <li><a href="bycuisine.html">By Cuisine</a></li>
-            <li><a href="bydistrict.html">By District</a></li>
+            <li>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                            <!-- Source: Original work by Carrie Kim -->
+                            <img alt="" src="images/personicon.png">
+                        </picture>
+                    </li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                </ul>
+            </li>
+
+            <li>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                            <!-- Source: Original work by Carrie Kim -->
+                            <img alt="" src="images/cuisineicon.png">
+                        </picture>
+                    </li>
+                    <li><a href="bycuisine.html">By Cuisine</a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li>
+                        <picture class="icon">
+                            <!-- Source: Original work by Carrie Kim -->
+                            <img alt="" src="images/districticon.png">
+                        </picture>
+                    </li>
+                    <li><a href="bydistrict.html">By District</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 
+    <h1>Home</h1>
+
+    <section class="darker-color">
     <h2>Welcome!</h2>
 
-    <picture>
+    <picture class="decorative">
         <!-- Source: https://www.freepik.com/free-vector/people-celebrating-thanksgiving-concept-illustration_10255114.htm#query=yellow%20restaurant%20illustration&position=2&from_view=search&track=ais -->
         <img alt="" src="images/eatery.jpg">
       </picture>
-      Source: <cite> <a href="https://www.freepik.com/free-vector/people-celebrating-thanksgiving-concept-illustration_10255114.htm#query=yellow%20restaurant%20illustration&position=2&from_view=search&track=ais">eatery illust</a></cite>
-
+      <cite class="source"> <a href="https://www.freepik.com/free-vector/people-celebrating-thanksgiving-concept-illustration_10255114.htm#query=yellow%20restaurant%20illustration&position=2&from_view=search&track=ais">eatery illust</a></cite>
+    <div class="paragraph">
     <p>
         Looking for your next fabulous meal in Seoul?
         Look up some of the most popular eateries chosen by the locals!
         <!--Source: Original work by Carrie Kim-->
     </p>
+    </div>
+    </section>
 
-    <picture>
-        <img src="/images/mapofseoul.jpg" alt="overall map of seoul">
+    <picture class="decorative">
+        <img src="images/mapofseoul.jpg" alt="overall map of seoul">
     </picture>
     <br>
     <!--Source: https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241-->
-    Source: <cite> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">seoul-map</a></cite>
+    <cite class="source"> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">seoul-map</a></cite>
     <br>
-    <picture>
+    <picture class="decorative">
         <img src="/images/mapofseoul-smaller.jpg" alt="smaller map of seoul">
     </picture>
     <br>
     <!--Source: https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241-->
-    Source: <cite> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">smaller-seoul-map</a></cite>
+    <cite class="source"> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">smaller-seoul-map</a></cite>
 </body>
 
 </html>
